fixing bugs and errors